--- a/src/main/webapp/style1.css
+++ b/src/main/webapp/style1.css
@@ -11,7 +11,7 @@
         }
 
         body {
-            background: linear-gradient(to bottom, #330f42, #ffffff);
+            background: linear-gradient(to bottom, #000000, #ffffff);
             color: #454749;
             display: flex;
             align-items: center;
@@ -40,7 +40,7 @@
             position: relative;
             width: 100%;
             min-width: 320px;
-            max-width: 38rem;
+            max-width: 29rem;
             overflow: hidden;
         }
 
